feat:changed favicon and sounds

--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
