feat: added weather, city

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="assets/favicon.ico" rel="shortcut icon" />
-  <link rel="stylesheet" href="css/owfont-regular.css" />
+  <link rel="stylesheet" href="./assets/fonts/owfont-master/css/owfont-regular.css" />
   <link rel="stylesheet" href="css/style.css" />
   <title>momentum</title>
 </head>
@@ -39,7 +39,7 @@
     <date class="date"></date>
     <div class="greeting-container">
       <span class="greeting"></span>
-      <input type="text" class="name name-optic" id="optic" placeholder="як Вас клічуць?" value=""/>
+      <input type="text" class="name name-optic" id="optic" placeholder="назавіце сябе..." value=""/>
     </div>
   </main>
   <footer class="footer">
