--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
   </main>
   <footer class="footer">
-    <button class="change-quote"></button>
+    <button class="change-quote" style="transform: rotate(0deg);"></button>
     <div>
       <div class="quote"></div>
       <div class="author"></div>
