feat: play-next-prev

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="./scripts/script.js"></script>
+  <script type="module" src="scripts/script.js"></script>
+<!--  <script type="module" src="scripts/playList.js"></script>-->
 </body>
 </html>
