--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="play-list"></ul>
     </div>
     <div class="weather">
-      <input type="text" id="city" class="city" />
+      <input type="text" id="city" class="city" autocomplete="off">
       <i class="weather-icon owf"></i>
       <div class="weather-error"></div>
       <div class="description-container">
@@ -39,7 +39,7 @@
     <date class="date"></date>
     <div class="greeting-container">
       <span class="greeting"></span>
-      <input type="text" class="name name-optic" id="optic" placeholder="назавіце сябе..." value=""/>
+      <input type="text" class="name optic" id="optic" placeholder="назавіце сябе..." value="" autocomplete="off">
     </div>
   </main>
   <footer class="footer">
