--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="assets/favicon.ico" rel="shortcut icon" />
-  <link rel="stylesheet" href="./assets/fonts/owfont-master/css/owfont-regular.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="assets/favicon.ico" rel="shortcut icon">
+  <link rel="stylesheet" href="./assets/css/owfont-regular.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>momentum</title>
 </head>
 <body class="body">
