--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
     </div>
   </main>
   <footer class="footer">
-    <button class="change-quote" style="transform: rotate(0deg);"></button>
+    <button class="change-quote" style="transform: rotate(0deg)"></button>
     <div>
       <div class="quote"></div>
       <div class="author"></div>
     </div>
   </footer>
   <script type="module" src="scripts/script.js"></script>
-<!--  <script type="module" src="scripts/playList.js"></script>-->
 </body>
 </html>
