--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="play-list"></ul>
     </div>
     <div class="weather">
-      <input type="text" id="city" class="city" autocomplete="off">
+      <input type="text" id="city" class="city" autocomplete="off" placeholder="Минск">
       <i class="weather-icon owf"></i>
       <div class="weather-error"></div>
       <div class="description-container">
